# deepseek-extension

./: .ai_knowledge_graph.json  .coveragerc  .editorconfig  .env.example  .eslintrc.base.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.json  AI_AGENT_SUCCESS.md  AI_CODE_EXPERT_PROPOSAL.md  AI_OPTIMIZATION_READY_TO_RUN.md  AI_OPTIMIZATION_RECOMMENDATIONS.md  AI_OPTIMIZATION_SUMMARY.md  AI_PROJECT_ANALYSIS_REPORT.md  AI_REFACTOR_SUMMARY.md  API_KEY_USAGE_RECOMMENDATIONS.md  AUTO_FIX_README.md  CLEANUP_SCRIPTS_PACKAGE.md  CONSISTENCY_GUARD_COMPLETE.md  CONSOLIDATION_SUMMARY.md  CORE_FEATURE_ANALYSIS_RECOMMENDATIONS.md  CORE_MODULE_DETAILED_ANALYSIS.md  DUPLICATE_CLEANUP_COMPLETED.md  DUPLICATE_CLEANUP_SCRIPT_READY.md  DUPLICATE_CLEANUP_SUCCESS.md  ENHANCED_CORE_INTEGRATION_GUIDE.md  FILE_CLEANUP_ANALYSIS_REPORT.md  FINAL_AI_OPTIMIZATION_SUMMARY.md  FINAL_PROJECT_STATUS.json  FINAL_PROJECT_STATUS.md  HYBRID_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_MAP.md  MONITORING_SETUP.md  Makefile  Modelfile  Modelfile.zeta  NUMPY_2X_COMPATIBILITY_COMPLETE.md  NUMPY_COMPATIBILITY_GUIDE.md  NUMPY_COMPATIBILITY_PACK_COMPLETE.md  (+155 more)
apps/backend/: Dockerfile  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_TODO.md  PHASE2_OPTIMIZATION_COMPLETED.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_MAP.md  __init__.py  _backup_metadata.json  apiClient.ts  application.py  auth.ts  dev_assistant.py  enhanced_main.py  openapi.json  profiler_demo.py  protocols.py  pyproject.toml  quick_fix_imports.py  quick_test.py  simple_app.py  simple_ollama_test.py  test_full_integration.py  test_prometheus.py  typedClient.ts  validate_imports.py  wsSchema.ts  zeta.db
apps/backend/app/: __init__.py  config.py  db.py  demo_integration_main.py  dependencies.py  deps.py  factory.py  lifespan.py  logger.py  main_clean.py  main_production.py  main_production_clean.py  worker.py
apps/backend/app/ai/: asr_service.py  config.py  embedder.py  llm.py  ocr_service.py  rag_service.py
apps/backend/app/api/: __init__.py
apps/backend/app/asr/: engine.py
apps/backend/app/auth/: auth_db.py  auth_dependencies.py  dependencies.py  dependencies_fixed.py  jwt_dependencies.py  jwt_handler.py  logging_config.py  security_middleware.py
apps/backend/app/common/: error_handlers.py  exceptions.py  schemas.py
apps/backend/cli/: __init__.py  dlq_replay.py  maintenance.py
apps/backend/config/: __init__.py  api_config.py  auth_config.py  cache.py  cache_config.py  capabilities.yaml  celery_config.py  database.json  database.py  logging.py  ml_config.py  model_matrix.yaml  models.py  observability.json  production.py  redis.py  security.json  security.py  settings.py  settings_shim.py  storage_config.py  unified_settings.py
apps/backend/core/: CORE_FILE_MAP.md  __init__.py  base.py  chunking.py  container.py  pipeline.py  types.py
apps/backend/data/: __init__.py  database_async.py  database_init.py  migrations.py  models.py  outbox_tables.py
apps/backend/datasets/: __init__.py  registry.yaml
apps/backend/deployment/: __init__.py  rollout.py
apps/backend/docs/: API.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DI_PATTERN_SETUP.md  FAQ.md  INSTALLATION.md  INTEGRATION.md  LICENSE.md  MIGRATION.md  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  TUTORIAL.md  USER_GUIDE.md  __init__.py
apps/backend/evaluators/: __init__.py  verifier_gpt5.py
apps/backend/examples/: __init__.py  profiler_demo.py  profiler_demo_impl.py  simple_app.py  simple_app_impl.py
apps/backend/infra/: __init__.py  embedding.py
apps/backend/infrastructure/: __init__.py
apps/backend/ingest/: __init__.py
apps/backend/integration/: __init__.py
apps/backend/observability/: __init__.py  alert_router.py  metrics.py  otel_init.py  sla_slo_dashboard.py
apps/backend/ollama/: __init__.py  client.py  monitoring.py  smoke_test.py
apps/backend/perf/: __init__.py  admin.py  chat_2025_09_02_02_58_41.md  config.py  enhanced_instrumentation.py  instrumentation.py  integration_manager.py  ml_optimization.py  production_config.py  smoke.py  success_metrics.py  tracing.py
apps/backend/reports/: __init__.py  pytest.xml
apps/backend/scripts/: __init__.py
apps/backend/storage/: __init__.py  archive_storage.py  backup_storage.py  blob_storage.py  cache_storage.py  document_storage.py  file_service.py  local_storage.py  log_storage.py  media_storage.py  s3_storage.py  session_storage.py  temp_storage.py  vector_storage.py
apps/backend/stubs/: __init__.py  openai.py
apps/backend/tests/: __init__.py  conftest.py  test_agent_orchestrator_parallel.py  test_agent_self_improvement.py  test_ai_runner_fix.py  test_application.py  test_auth_production.py  test_auto_updater.py  test_basic_structure.py  test_chat.py  test_check_duplicates.py  test_dev_assistant.py  test_domain_event_aliases.py  test_dto_conversion.py  test_enhanced_rag.py  test_event_bus_fix.py  test_feedback_api.py  test_learning_api.py  test_memory_normalization.py  test_no_duplicate_concepts.py  test_performance_advanced_caching.py  test_plan_isolated.py  test_profiler_demo.py  test_protocols.py  test_rag_optimized.py  test_scale_agent_use_case.py  test_security_basic.py  test_security_system.py  test_simple_app.py  test_smoke.py  test_start_all_tools.py
apps/backend/tools/: __init__.py  implements.py  ports_tools.py
apps/backend/trainer/: __init__.py  distill_gpt5.py  finetune_llama4.py  model_matrix.py
apps/backend/training/: __init__.py  gpt4o_trainer.py
apps/backend/triage/: __init__.py  safety_filters.py
apps/backend/workflows/: __init__.py  trainer_pipeline.py
python_backend/: demo.py  pyproject.toml  requirements.txt
python_backend/core/domain/: entities.py  interfaces.py
python_backend/core/services/: cache_service.py  enhanced_service.py  metrics_service.py
python_backend/infrastructure/: reliability.py
python_backend/infrastructure/repositories/: distillation_repository.py
python_backend/tests/: test_enhanced_service.py
shared/configs/: .ruff.toml  package-lock.json  package.json  pyproject.toml
(+5928 files in other folders)
